# in-memory-filesystem

./: .gitignore  README.md  setup.cfg
src/fs/: __main__.py  exceptions.py  fs.py  runner.py
test/fs/: test_cd.py  test_cp.py  test_find.py  test_hardlink.py  test_init_and_exec.py  test_ls.py  test_mkdir.py  test_mv.py  test_pwd.py  test_read_write.py  test_rm.py  test_symlink.py  test_touch.py
