#
# Copyright (c) 2021, 2022 by Delphix. All rights reserved.
#

[metadata]
name = fs
version = 0.0.1
description = An in memory filesystem.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = find:
package_dir = =src
install_requires =
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fs = fs.runner:main
